Increase timeout waiting for processes to end with killed with SIGKILL

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Major - P3
    • 3.3.10
    • Affects Version/s: None
    • Component/s: Shell
    • None
    • Fully Compatible
    • ALL
    • Platforms 16 (06/24/16), Platforms 17 (07/15/16)
    • 0
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      When the shell tries to kill processes, it initially sends SIGTERM, and then SIGKILL a few seconds later if the process hasn't died already. If the process hasn't actually terminated by then, it crashes which causes tests to fail.

            Assignee:
            Jonathan Reams
            Reporter:
            Jonathan Reams
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: