SERVER-24788 Raise the timeout waiting for processes to end in the shell